charts/infrastructure/istio-supporting.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: gateway
  namespace: istio-system
spec:
  selector:
    app: istio-ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - '*'
    tls:
      httpsRedirect: true # sends 301 redirect for http requests
  - port:
      number: 443
      name: https-443
      protocol: HTTPS
    hosts:
    - '*'
    tls:
      mode: SIMPLE # enables HTTPS on this port
      credentialName: local-ongy-net
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  labels:
    app: ingress-proxy
  name: ingress-proxy
  namespace: istio-system
spec:
  selector:
    matchLabels:
      app: ingress-proxy
  template:
    metadata:
      labels:
        app: ingress-proxy
    spec:
      dnsPolicy: ClusterFirstWithHostNet
      hostNetwork: true
      containers:
        - image: alpine/socat
          name: http-proxy
          args:
          - TCP6-LISTEN:80,reuseaddr,fork
          - TCP:istio-ingressgateway:80
        - image: alpine/socat
          name: https-proxy
          args:
          - TCP6-LISTEN:443,reuseaddr,fork
          - TCP:istio-ingressgateway:443
        - image: alpine/socat
          name: quic-proxy
          args:
          - UDP6-LISTEN:443,reuseaddr,fork
          - UDP:istio-ingressgateway:443
