charts/infrastructure/librespeed.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: infrastructure
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: librespeed
  name: librespeed
  namespace: infrastructure
spec:
  replicas: 1
  selector:
    matchLabels:
      app: librespeed
  template:
    metadata:
      labels:
        app: librespeed
    spec:
      volumes:
        - name: www-html
          emptyDir:
            medium: Memory
            sizeLimit: 500Mi
      containers:
        - image: adolfintel/speedtest
          securityContext:
            seccompProfile:
              type: RuntimeDefault
            capabilities:
              drop: ['ALL']
              add: ['CHOWN', 'SETGID', 'SETUID', 'DAC_OVERRIDE']
            allowPrivilegeEscalation: false
            privileged: false
            runAsNonRoot: false
            readOnlyRootFilesystem: false
            #runAsUser: 33
            #runAsGroup: 33
          volumeMounts:
            - mountPath: "/var/www/html"
              name: www-html
          readinessProbe:
            httpGet:
              path: /
              port: 8080
          name: librespeed
---
apiVersion: v1
kind: Service
metadata:
  name: librespeed
  namespace: infrastructure
spec:
  selector:
    app: librespeed
  ports:
    - protocol: TCP
      port: 8080
      name: http
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: librespeed
spec:
  gateways: [istio-system/gateway]
  hosts: [speedtest.local.ongy.net]
  http:
  - route:
    - destination:
        host: librespeed.infrastructure.svc.cluster.local
#---
#apiVersion: networking.k8s.io/v1
#kind: NetworkPolicy
#metadata:
#  name: librespeed
#  namespace: infrastructure
#spec:
#  policyTypes:
#    - Ingress
#    - Egress
#  ingress:
#    - from:
#        - namespaceSelector:
#            matchLabels:
#              kubernetes.io/metadata.name: istio-system
#      ports:
#        - protocol: TCP
#          port: 8080
